# ZyEngine

./: .atom-gdb.json  .gcc-flags.json  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Material.cpp  Material.h  README.md  imgui.ini  process-palette.json
examples/: CMakeLists.txt
examples/buffers/: CMakeLists.txt  main.cpp
examples/imgui/: CMakeLists.txt  main.cpp
examples/instancing/: CMakeLists.txt  main.cpp  main.frag
examples/models/: CMakeLists.txt  main.cpp
examples/template/: CMakeLists.txt  main.cpp
examples/texture/: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: .gitrepo
libs/glm/: .gitrepo
libs/imgui/: .gitrepo
libs/spdlog/: .gitrepo
libs/stb/: .gitrepo
scripts/: create_example.sh  generate_compile_commands.sh
src/: Camera.cpp  Functions.cpp  Objects.cpp  Shader.cpp  ShaderFromFile.cpp  UniformFunctions.cpp  VertexArrayObject.cpp  Window.cpp  cube.cpp  main.cpp
src/Asset/: Image.cpp
src/Core/: Asset.h  Camera.cpp  Camera.h  CameraController.h  Errors.h  Functions.h  Gui.cpp  Gui.h  Image.cpp  Image.h  Object.cpp  Object.h  Preprocessor.h  Shader.cpp  UniformFunctions.cpp  Utils.cpp  Utils.h  VertexArray.cpp  VertexArrayObject.cpp  Window.cpp  Window.h  World.cpp
src/Core/Rendering/: Buffer.cpp  Buffer.h  Shader.cpp  VertexArray.cpp  VertexArray.h
src/Model/: IcosphereGenerator.cpp  Material.h  Model.cpp  Model.h  ModelGeneration.h  ModelGenerator.cpp  ModelGenerator.h  ObjLoad.h
src/Rendering/: Asset.h  Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  ShaderGeneration.h  ShaderGenerator.h  ShaderType.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/World/: Camera.h  Object.cpp  Object.h  ObjectArray.h  World.cpp  World.h
src/shaders/: main.frag  main.vert
test/: CMakeLists.txt  cube.cpp  main.cpp
test/shaders/: main.vert
